tests/baselines/reference/FunctionDeclaration1_es6.errors.txt
tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration1_es6.ts(1,10): error TS1220: Generators are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/es6/functionDeclarations/FunctionDeclaration1_es6.ts (1 errors) ====
    function * foo() {
             ~
!!! error TS1220: Generators are only available when targeting ECMAScript 6 or higher.
    }